# yolov10cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  download_model.py  main.cpp  main.ipynb  prueba.cpp  requirements.txt  run.cpp
src/: main.cpp  placeholder.cpp  video.cpp
src/ia/: inference.cpp  inference.h
